add time functio all the js file to show in history

--- a/index.html
+++ b/index.html
@@ -171,8 +171,11 @@
                 </div>
             </dialog>
         </section>
-        <section id="history-section" class="hidden my-16">
-            <h1 class="text-center text-2xl font-extrabold">This is history Section</h1>
+        <section id="history-section" class="hidden my-16 grid grid-cols-1 justify-items-center space-y-4">
+            <!-- <div class="border-2 rounded-xl p-10 space-y-4 w-9/12">
+                <h4 class="font-bold">96500 Taka is Donated for famine-2024 at Feni, Bangladesh</h4>
+                <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
+            </div> -->
         </section>
     </main>
     <script src='js/features.js'></script>
