add the questions and some of the answers in the blog page

--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
 </head>
 
 <body class="font-Lexend">
-    <header class="bg-orange-50">
+    <header class="bg-orange-50 sticky top-0">
         <nav class="w-11/12 mx-auto py-5 space-y-6 md:space-y-0">
             <div class="flex items-center justify-center md:hidden">
                 <a class="flex items-center gap-3 text-lg font-semibold" href="index.html">
@@ -64,23 +64,104 @@
         <section class="w-9/12 mx-auto my-5 space-y-4">
             <div class="collapse collapse-plus border-2 border-gray-300 ">
                 <input type="radio" name="my-accordion-3" checked="checked" />
-                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
                 <div class="collapse-content">
-                    <p>hello</p>
+                    <p>
+                        A programming interface for HTML is called the Document Object Model (DOM). It converts HTML
+                        material into a
+                        standardized object that can be easily accessed and modified by functional programming languages
+                        such as JavaScript. All
+                        dynamic web pages rely on the DOM for correct presentation and functionality, as the majority of
+                        web page events are
+                        handled by non-HTML code.
+                    </p>
                 </div>
             </div>
             <div class="collapse collapse-plus border-2 border-gray-300 ">
                 <input type="radio" name="my-accordion-3" />
-                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-title text-xl font-medium">How do you select an element from the DOM?</div>
                 <div class="collapse-content">
-                    <p>hello</p>
+                    <p>One can select an element from the DOM in several ways. Such as.
+                    </p>
+                    <ul class="list-disc pl-10">
+                        <li class="font-semibold">Finding HTML elements by id</li>
+                        <p>The easiest way to find an HTML element in the DOM, is by using the element id. (using
+                            getElementById).</p>
+                        <li class="font-semibold">Finding HTML elements by tag name</li>
+                        <p>Returns a collection of all elements in the document with the specified tag name. (using
+                            getElementsByTagName).</p>
+                        <li class="font-semibold">Finding HTML elements by class name</li>
+                        <p>
+                            It shows a collection of all elements in the document with the specified class name. (Using
+                            getElementsByClassName).
+                        </p>
+                        <li class="font-semibold">Finding HTML elements by CSS selectors</li>
+                        <div>
+                            <p>Here we have two CSS selectors.</p>
+                            <ul class="list-disc pl-10">
+                                <li><span class="font-semibold">querySelector:</span> The querySelector method allows
+                                    you to select the first element that matches a specified CSS selector(s) in the
+                                    document.</li>
+                                <li><span class="font-semibold">querySelectorAll:</span> The querySelectorAll method
+                                    allows you to select all elements that match a specified CSS selector(s) in the
+                                    document.</li>
+                            </ul>
+                        </div>
+                    </ul>
                 </div>
             </div>
             <div class="collapse collapse-plus border-2 border-gray-300 ">
                 <input type="radio" name="my-accordion-3" />
-                <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                <div class="collapse-title text-xl font-medium">What is event delegation in the context of the DOM, and
+                    why is it useful?</div>
                 <div class="collapse-content">
-                    <p>hello</p>
+                    <p>Event delegation is simply a method for handling events effectively. Instead of adding an event
+                        listener to each similar
+                        element, we can add one to a parent element and use the event object's.target attribute to
+                        initiate an event on a
+                        specific target.</p>
+                    <pre class="my-3">
+                        "const listContainer = document.getElementById('list-container');
+                        listContainer.addEventListener('click', function (event) {
+                        event.target.parentNode.removeChild(event.target);
+                        })"
+                    </pre>
+                    <p>
+                        Here we have a single event listener and a single responding function. In the above-shown
+                        method, we have improved the
+                        performance, but we have lost access to individual li elements so to resolve this issue, we used
+                        a technique called
+                        event delegation. The event object has a special property call .target which will help us in
+                        getting access to
+                        individual li elements with the help of phases.
+                    </p>
+                    <p class="mt-3">
+                        <span class="font-semibold">Event delegation provides the following benefits:</span><br>
+                        Improved performance: Attaching a single event
+                        listener is more
+                        efficient than attaching multiple event listeners to individual elements, especially for large
+                        or dynamic lists. This
+                        reduces memory usage and improves overall performance.
+                    </p>
+                </div>
+            </div>
+            <div class="collapse collapse-plus border-2 border-gray-300 ">
+                <input type="radio" name="my-accordion-3" />
+                <div class="collapse-title text-xl font-medium">How do you manipulate an element's attributes and styles
+                    using the DOM?</div>
+                <div class="collapse-content">
+                    <p>
+                        Each and every element object in the DOM has properties and methods that you can use to interact
+                        with that element. We can manipulate an element's attributes and styles using JavaScript by
+                        interacting with the DOM. Here how we can do it:
+                    </p>
+                    <ol class="list-decimal pl-10">
+                        <li class="font-semibold">Change the Content of an Element</li>
+                        <li class="font-semibold">Manipulate the Class Attribute</li>
+                        <li class="font-semibold">Setting CSS Styles Using JavaScript</li>
+                        <li class="font-semibold">Create, Add, and Remove Elements</li>
+                        <li class="font-semibold">Manipulating Element Attributes</li>
+                    </ol>
                 </div>
             </div>
         </section>
