--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body class="font-Lexend">
-    <header class="bg-orange-50">
+    <header class="bg-orange-50 sticky top-0">
         <nav class="w-11/12 mx-auto py-5 space-y-6 md:space-y-0">
             <div class="flex items-center justify-center md:hidden">
                 <h2 class="flex items-center gap-3 text-lg font-semibold">
