--- a/blog.html
+++ b/blog.html
@@ -37,13 +37,13 @@
         <div class="bg-orange-50">
             <nav class="w-11/12 mx-auto py-5 space-y-6 md:space-y-0">
                 <div class="flex items-center justify-center md:hidden">
-                    <h2 class="flex items-center gap-3 text-lg font-semibold">
+                    <a class="flex items-center gap-3 text-lg font-semibold" href="index.html">
                         <img src="assets/logo.png" alt="">Donate For Bangladesh
-                    </h2>
+                    </a>
                 </div>
                 <div class="navbar">
                     <div class="navbar-start">
-                        <a class="btn btn-md bg-green-400 text-lg px-8" href="blog.html">Blog</a>
+                        <a class="btn btn-md bg-green-400 text-lg px-8" href="index.html">Home</a>
                     </div>
                     <div class="navbar-center md:flex">
                         <a class="hidden md:flex items-center gap-3 text-lg font-semibold" href="index.html">
@@ -62,8 +62,18 @@
         </div>
     </header>
 
-    <main class="my-16">
-        <section class="w-9/12 mx-auto my-5 space-y-4">
+    <main class="my-16 w-9/12 mx-auto space-y-10">
+        <section>
+            <h1 class="text-4xl md:text-7xl font-bold flex">
+                Important FAQ
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                    class="size-8 md:size-16">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Zm-9 5.25h.008v.008H12v-.008Z" />
+                </svg>
+            </h1>
+        </section>
+        <section class="space-y-4">
             <div class="collapse collapse-plus border-2 border-gray-300 ">
                 <input type="radio" name="my-accordion-3" checked="checked" />
                 <div class="collapse-title text-xl font-medium">What is the Document Object Model (DOM)?</div>
@@ -150,7 +160,7 @@
                         <li class="font-semibold">Create, Add, and Remove Elements</li>
                         <li class="font-semibold">Manipulating Element Attributes</li>
                     </ol>
-                    
+
                 </div>
             </div>
         </section>
