--- a/index.html
+++ b/index.html
@@ -175,6 +175,22 @@
                     </div>
                 </div>
             </dialog>
+            <!-- <dialog id="my_modal_2" class="modal">
+                <div class="modal-box">
+                    <h3 class="text-4xl font-bold text-center py-4">Error</h3>
+                    <div class="flex justify-center">
+                        <img class="" src="assets/coin.png" alt="">
+                    </div>
+            
+                    <p class="py-4 text-center">Invalid Donation Amount</p>
+                    <h3 class="text-lg font-bold text-center py-4">Successfully</h3>
+                    <div class="modal-action justify-center">
+                        <form method="dialog">
+                            <button class="btn rounded-full bg-gray-300">Close Confirmation</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog> -->
         </section>
         <section id="history-section" class="hidden my-16 grid grid-cols-1 justify-items-center space-y-4">
             <!-- <div class="border-2 rounded-xl p-10 space-y-4 w-9/12">
