made changes to modal button

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <div class="modal-action justify-center">
                         <form method="dialog">
                             <!-- if there is a button in form, it will close the modal -->
-                            <button class="btn rounded-full bg-gray-300">Close Confirmation</button>
+                            <button class="btn btn-md px-8 bg-green-400">Close Confirmation</button>
                         </form>
                     </div>
                 </div>
